<resources>
    <string name="app_name">HappyPlace</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="location">Location</string>
    <string name="importButton">Add Image</string>
    <string name="save">Save</string>
    <string name="selectLocation">SELECT CURRENT LOCATION</string>
    <string name="addImage">ADD IMAGE</string>
    <string name="noHappyPlace">
        No happy place yet. Kindly add one.
    </string>
    <string name="itemImageDescription">Image</string>
    <string name="itemName">Name</string>

    <string name="title_activity_map">MapActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="MAPS_KEY_API">AIzaSyCTZo7lF2vnf3Ws44LXqblDMP0BueXWRaU</string>
</resources>