<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="410dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/itemStartMargin"
        android:layout_marginEnd="@dimen/itemEndMargin"
        android:background="@color/white"
        app:cardCornerRadius="@dimen/itemCornerRadius"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout

        android:layout_width="410dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="@dimen/itemContentPadding"
        app:layout_constraintTop_toTopOf="parent"
        >

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivPlaceImage"
            android:layout_width="@dimen/itemCircularImageSize"
            android:layout_height="@dimen/itemCircularImageSize"
            android:contentDescription="@string/itemImageDescription"
            android:src="@mipmap/ic_launcher_round"
            app:civ_border_color="@color/borderColor"/>

        <LinearLayout
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/itemStartMargin"
            android:layout_marginEnd="@dimen/itemEndMargin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="305dp"
                android:layout_height="wrap_content"
                android:text="@string/itemName"
                android:textColor="@color/descriptionColor"
                android:textSize="@dimen/itemDescriptionTextSize"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="305dp"
                android:layout_height="wrap_content"
                android:textColor="@color/descriptionColor"
                android:textSize="@dimen/itemDescriptionTextSize"
                android:text="@string/description"/>

        </LinearLayout>

    </LinearLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>